[doc] Mention PMD_JAVA_OPTS